[gd_scene load_steps=32 format=2]

[ext_resource path="res://art/Enemies/AngryPig/Idle (36x30).png" type="Texture" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]
[ext_resource path="res://art/Enemies/AngryPig/Walk (36x30).png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=11]
radius = 16.0
height = 0.0

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 36, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 108, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 180, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 216, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 252, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 36, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 72, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 108, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 144, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 180, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 216, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 252, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 324, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 360, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 396, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 432, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 468, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 504, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 540, 0, 36, 30 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=22]
radius = 24.0

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( 128, 296 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 11 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 21 )
animation = "run"
frame = 7
playing = true

[node name="InteractArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
shape = SubResource( 22 )

[node name="AITimer" type="Timer" parent="."]

[connection signal="body_entered" from="InteractArea" to="." method="_on_InteractArea_body_entered"]
[connection signal="body_exited" from="InteractArea" to="." method="_on_InteractArea_body_exited"]
[connection signal="timeout" from="AITimer" to="." method="_on_AITimer_timeout"]
